# cap

./: .editorconfig  .gitignore  ADOPTERS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  go.mod
.cache/go-build/: trim.txt
.github/: FUNDING.yml
.github/workflows/: publish-go.yml  publish-node.yml  publish-python.yml  wiki-sync.yml
.gocache/: trim.txt
.gocache/00/: 000a7673899170f3adcac947cabf348c041d32330bb3f6ac6f551128c0c7efa2-a  0012205464a7bd35f27cd27ab2953309286cac3c2d79ec87b39d8f28524d9b93-a  0039bf67b87eaa9a4d835e325aa9cac3fe0973767409460c8370eeb2bb9d7a14-d  0046554c38fdb46ef2ba0c4dbc3cd2ea26b24eaeabf7815e67aa712ab22f4a96-a  00566b80004f316f7595b5e999f2db94c8bb406e238b639cf66f58ed4498ab45-a  0078a29baa11cd65aad76511b5f29be91e23969d8d096254c0a93de7cb9cf647-d  (+2 more)
cpp/: README.md
docs/: WHY_CAP.md
examples/: README.md  heartbeat.json  job-request.json  job-result.json
launch-kit/: adoption-guide.md  announcement.md  blog-multi-agent-in-50-lines.md  blog-why-mcp-not-enough.md  pitch-deck-outline.md  website-copy.md
node/: README.md  cap_pb.js
python/: README.md
sdk/: README.md
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/examples/: echo_main.cpp
sdk/cpp/include/cap/: bus_interface.h  client.h  subjects.h  worker.h
sdk/cpp/src/: client.cpp  worker.cpp
spec/: 00-index.md  01-overview.md  02-core-concepts.md  02-envelope-buspacket.md  03-job-protocol.md  03-wire-envelope-buspacket.md  04-jobs-and-state-machine.md  04-memory-pointer-spec.md  04b-context-and-memory.md  05-heartbeats.md  05-memory-pointers.md  06-heartbeats-and-pools.md  06-safety.md  07-safety-kernel-hook.md  07-state-machine.md  08-workflows-and-orchestrators.md  08-workflows.md  09-transport-and-deployment-profiles.md  09-transport-profile.md  10-security-and-observability.md  10-security-observability.md  11-security-best-practices.md  12-glossary.md
tools/: README.md  make_protos.sh
wiki/: Architecture.md  C---SDK.md  Examples.md  Getting-Started.md  Go-SDK.md  Home.md  Node-js-SDK.md  Protocol-Specification.md  Python-SDK.md  SDKs.md  Security.md
(+3585 files in other folders)
